tests/v0_8/invalid/contract_unsupported_rollback.devops
version = "v0.8"

target "srv" { address = "1.1.1.1:7700" }

node "invalid_rollback" {
    type    = file.sync
    targets = [srv]
    src     = "./src"
    dest    = "./dest"
    
    rollback_cmd = ["rm", "-rf", "./dest"] // rollback_cmd only allowed on process.exec
}
